// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatsBlock > renders conference background colors correctly 1`] = `
"<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>
<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #003872; color: white;">2</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/VGK" class="flex justify-center"><img src="/logos/SVG/VGK.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Vegas Golden Knights" title="Vegas Golden Knights"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>"
`;

exports[`StatsBlock > renders position numbers correctly 1`] = `
"<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>
<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">2</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/MTL" class="flex justify-center"><img src="/logos/SVG/MTL.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Montreal Canadiens" title="Montreal Canadiens"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>
<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">3</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/BOS" class="flex justify-center"><img src="/logos/SVG/BOS.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Boston Bruins" title="Boston Bruins"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>"
`;

exports[`StatsBlock > renders standings table rows 1`] = `
"<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>
<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">2</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/MTL" class="flex justify-center"><img src="/logos/SVG/MTL.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Montreal Canadiens" title="Montreal Canadiens"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>"
`;

exports[`StatsBlock > renders with both columns hidden 1`] = `
"<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
  <!--v-if-->
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>"
`;

exports[`StatsBlock > renders with conference column 1`] = `
"<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
  <!--v-if-->
  <td class="px-1 py-2">EAST</td>
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>"
`;

exports[`StatsBlock > renders with division column 1`] = `
"<tr class="even:bg-zinc-600 text-center text-sm">
  <td class="px-1 py-2" style="background: #b9112d; color: white;">1</td>
  <td class="w-12 px-1 py-2"><a href="/player-stats/TOR" class="flex justify-center"><img src="/logos/SVG/TOR.svg" class="h-8 sm:h-10 cursor-pointer hover:scale-110 transition-transform" alt="Toronto Maple Leafs" title="Toronto Maple Leafs"></a></td>
  <td class="px-1 py-2">ATLANTIC</td>
  <!--v-if-->
  <td class="px-1 py-2">50</td>
  <td class="px-1 py-2">30</td>
  <td class="px-1 py-2">15</td>
  <td class="px-1 py-2">5</td>
  <td class="font-bold px-1 py-2">65</td>
  <td class="px-1 py-2">28</td>
  <td class="px-1 py-2">150</td>
  <td class="px-1 py-2">120</td>
  <td class="px-1 py-2">+30</td>
  <td class="px-1 py-2">15-5-5</td>
  <td class="px-1 py-2">15-10-0</td>
  <td class="px-1 py-2">7-3-0</td>
  <td class="px-1 py-2">W3</td>
</tr>"
`;
